--- a/htmlPages/homePage/homepage.css
+++ b/htmlPages/homePage/homepage.css
@@ -2,6 +2,19 @@ body {
   background-color: whitesmoke;
 }
 
+.carousel-caption {
+  width: 400px;
+  z-index: 10;
+  color: #fff;
+  text-align: left;
+  top: 50%;
+  left: 15%;
+  bottom: auto;
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+}
+
 .flip-card {
   background-color: transparent;
   width: 300px;
