Added texts to the curosal and font changes
Added texts to the curosal and font changes

--- a/htmlPages/homePage/homepage.css
+++ b/htmlPages/homePage/homepage.css
@@ -3,16 +3,25 @@ body {
 }
 
 .carousel-caption {
-  width: 400px;
   z-index: 10;
   color: #fff;
   text-align: left;
   top: 50%;
-  left: 15%;
+  left: 5%;
   bottom: auto;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    "Helvetica Neue", sans-serif !important;
   -webkit-transform: translate(0, -50%);
   -ms-transform: translate(0, -50%);
   transform: translate(0, -50%);
+}
+
+.carousel-caption h1 {
+  font-size: 250%;
+}
+
+.carousel-caption p {
+  font-size: 150%;
 }
 
 .flip-card {
